added front face setting

--- a/play.html
+++ b/play.html
@@ -102,6 +102,12 @@
 		<div style="float:left; margin:0.5em;">
 			<p><b>Settings:</b></p>
 			Textures: <input id="texture-button" type="button" value="Disable"/><br>
+			Front Face: 
+			<select id="front-face">
+				<option value="cw">Clock Wise</option>
+				<option value="ccw">Counter CW</option>
+			</select>
+			<br>
 			RenderMode: 
 			<select id="rendermode-dropdown">
 				<option value="triangles">Triangles</option>
