moved images path to Images.path; created textures object to wrap operations; made some calbacks cleaner; moved all ship.js lists into level object; added culling checkbox; converted texturing enable/disable to a checkbox

--- a/play.html
+++ b/play.html
@@ -101,7 +101,8 @@
 		</div>
 		<div style="float:left; margin:0.5em;">
 			<p><b>Settings:</b></p>
-			Textures: <input id="texture-button" type="button" value="Disable"/><br>
+			Textures: <input id="texture-button" type="checkbox" checked="true"/><br>
+			Culling: <input id="culling" type="checkbox" checked="true"/><br>
 			Front Face: 
 			<select id="front-face">
 				<option value="cw">Clock Wise</option>
