added a fovy option

--- a/play.html
+++ b/play.html
@@ -142,6 +142,7 @@
 			<br>
 			Line Width: <input id="line-width" type="text" value="1" style="width:2em;"/><br>
 			Point Size: <input id="point-size" type="text" value="1" style="width:2em;"/><br>
+			Perspective: FOVY=<input id="fovy" type="text" value="70.0" style="width:3em;"><br>
 			<p>
 				Gamma: <input id="gamma-value" type="text" value="1" style="width:13em;"/><br>
 				blue line: no change in image.<br>
