mouse accell option

--- a/play.html
+++ b/play.html
@@ -134,7 +134,8 @@
 				<b>d</b> = down<br>
 				<b>f</b> = left<br>
 				<b>g</b> = right<br>
-			</div>
+			</div>	
+			Mouse Accell: <input id="mouse-accell" type="text" value="3" style="width:2em;"/>
 		</div>
 		<div style="float:left; margin:0.5em;">
 			<p><b>Settings:</b></p>
