made canvas only respond to keystroke events on mouse over canvas

--- a/play.html
+++ b/play.html
@@ -32,7 +32,9 @@
 </head>
 <body>
 	
-	<canvas id="lesson02-canvas" width="500" height="500"></canvas>
+	<div id="canvas-wrapper" style="padding:1em;">
+		<canvas id="lesson02-canvas" width="500" height="500"></canvas>
+	</div>
 
 	<div>
 		<b class="button" onclick="$('#info-body').toggle()">Info</b>
