added perspective-far setting

--- a/play.html
+++ b/play.html
@@ -93,7 +93,11 @@
 				<br>
 				Line Width: <input id="line-width" type="text" value="1" style="width:2em;"/><br>
 				Point Size: <input id="point-size" type="text" value="1" style="width:2em;"/><br>
-				Perspective: FOVY=<input id="fovy" type="text" value="70.0" style="width:3em;"/><br>
+				Perspective: <br>
+				<div style="padding-left:1em;">
+					FOVY: <input id="fovy" type="text" value="70.0" style="width:4em;"/><br>
+					FAR: <input id="far" type="text" value="10000.0" style="width:4em;"/>
+				</div>
 				Canvas Size: <input id="canvas-width" type="text" value="500" style="width:2em;"/> x 
 						<input id="canvas-height" type="text" value="500" style="width:2em;"/><br>
 				<p>
