added fog properly as a setting

--- a/play.html
+++ b/play.html
@@ -93,6 +93,10 @@
 				<br>
 				Line Width: <input id="line-width" type="text" value="1" style="width:2em;"/><br>
 				Point Size: <input id="point-size" type="text" value="1" style="width:2em;"/><br>
+				Fog: <input id="fog" type="checkbox"/><br>
+				<div style="padding-left:1em;">
+					Density: <input id="fog-density" type="text" value="0.0005" style="width:4em;"/>
+				</div>
 				Perspective: <br>
 				<div style="padding-left:1em;">
 					FOVY: <input id="fovy" type="text" value="70.0" style="width:4em;"/><br>
